--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run generate-sitemap && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-sitemap": "node scripts/generate-sitemap.mjs"
+    "generate-sitemap": "node scripts/generate-sitemap.mjs",
+    "generate-icons": "powershell -ExecutionPolicy Bypass -File scripts/generate-icons.ps1 -InputPath public\\logo.png -OutputDir public"
   },
   "dependencies": {
     "lucide-react": "^0.548.0",
