--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,23 @@
 {
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [{ "type": "host", "value": "fnc-reformas.es" }],
+      "destination": "https://enc-reformas.es/:path*",
+      "permanent": true
+    },
+    {
+      "source": "/:path*",
+      "has": [{ "type": "host", "value": "www.fnc-reformas.es" }],
+      "destination": "https://enc-reformas.es/:path*",
+      "permanent": true
+    },
+    {
+      "source": "/:path*",
+      "has": [{ "type": "host", "value": "fnc-reparaciones.vercel.app" }],
+      "destination": "https://enc-reformas.es/:path*",
+      "permanent": true
+    }
+  ],
   "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
