--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ENC Reformas - Reformas y Reparaciones Profesionales",
-  "short_name": "ENC Reformas",
+  "name": "FNC Reformas - Reformas y Reparaciones Profesionales",
+  "short_name": "FNC Reformas",
   "description": "Servicios profesionales de pintura, carpintería y reparaciones. Reformas integrales con garantía y acabados de calidad.",
   "start_url": "/",
   "display": "standalone",
