--- a/vercel.json
+++ b/vercel.json
@@ -3,19 +3,19 @@
     {
       "source": "/:path*",
       "has": [{ "type": "host", "value": "fnc-reformas.es" }],
-      "destination": "https://enc-reformas.es/:path*",
+      "destination": "https://fnc-reformas.es/:path*",
       "permanent": true
     },
     {
       "source": "/:path*",
       "has": [{ "type": "host", "value": "www.fnc-reformas.es" }],
-      "destination": "https://enc-reformas.es/:path*",
+      "destination": "https://fnc-reformas.es/:path*",
       "permanent": true
     },
     {
       "source": "/:path*",
       "has": [{ "type": "host", "value": "fnc-reparaciones.vercel.app" }],
-      "destination": "https://enc-reformas.es/:path*",
+      "destination": "https://fnc-reformas.es/:path*",
       "permanent": true
     }
   ],
